working on the Grid

--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
 </head>
 <body>
     <main>
-        <div class="err">
-            <div class="firstTray">
-                <img src="img/dinner.png" alt="A tray filled with a variety of fresh fruits, perfect for dinner">
+        <div class="container">
+            <div id="tray1" >
+                <img class="dinner" src="img/dinner.png" alt="A tray filled with a variety of fresh fruits, perfect for dinner">
             </div>
-            <div class="secondTray">
-                <img src="img/dinner.png" alt="A tray filled with a variety of fresh fruits, perfect for dinner">
+            <div id="tray2" >
+                <img class="dinner" src="img/dinner.png" alt="A tray filled with a variety of fresh fruits, perfect for dinner">
             </div>
-
+            <div id="mango1">
+                <img class="mango" src="img/mango.jpg" alt="A mango">
+            </div>
+            <div id="mango2">
+                <img class="mango" src="img/mango.jpg" alt="A mango">
+            </div>
         </div>
-            <img src="img/mango.jpg" alt="A mango">
-        </div>
+        
     </main>
-    <footer>
-
-    </footer>
 </body>
 </html>
