--- a/index.html
+++ b/index.html
@@ -21,8 +21,29 @@
             <div id="mango2">
                 <img class="mango" src="img/mango.jpg" alt="A mango">
             </div>
+            <div id="mango3">
+                <img class="mango" src="img/mango.jpg" alt="A mango">
+            </div>
+            <div id="mango4">
+                <img class="mango" src="img/mango.jpg" alt="A mango">
+            </div>
+            <div id="tray3" >
+                <img class="dinner" src="img/dinner.png" alt="A tray filled with a variety of fresh fruits, perfect for dinner">
+            </div>
+            <div id="mango5">
+                <img class="mango" src="img/mango.jpg" alt="A mango">
+            </div> 
+            <div id="mango6">
+                <img class="mango" src="img/mango.jpg" alt="A mango">
+            </div> 
+            <div id="mango7">
+                <img class="mango" src="img/mango.jpg" alt="A mango">
+            </div> 
+            <div id="tray4" >
+                <img class="dinner" src="img/dinner.png" alt="A tray filled with a variety of fresh fruits, perfect for dinner">
+            </div>
         </div>
-        
+
     </main>
 </body>
 </html>
